manifests/ingress-security/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: private-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    homelab.techtronics.top/ingress-plane: private
